syntax = "proto3";

option csharp_namespace = "Todo.Grpc";

import "google/api/annotations.proto";

package todo;

service Todo {
  
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse){
    option (google.api.http) = {
      post: "/v1/todo",
      body: "*"
    };
  }
  
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {
    option (google.api.http) = {
      get: "/v1/todo/{id}"
    };
  }
  
  rpc ListTodo(ListTodoRequest) returns (ListTodoResponse) {
    option (google.api.http) = {
      get: "/v1/todo"
    };
  }
  
  rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse) {
    option (google.api.http) = {
      put: "/v1/todo",
      body: "*"
    };
  }
    
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse) {
    option (google.api.http) = {
      delete: "/v1/todo/{id}"
    };
  }  
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  int32 id = 1;
}

message GetTodoRequest {
  int32 id = 1;
}

message GetTodoResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message ListTodoRequest {}

message ListTodoResponse {
  repeated GetTodoResponse to_do = 1;
}

message UpdateTodoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message UpdateTodoResponse {
  int32 id = 1;
}

message DeleteTodoRequest {
  int32 id = 1;
}

message DeleteTodoResponse {
  int32 id = 1;
}

